# ai-trading-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  ai-trading-assistant-master-prompt-v2.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: main.py  pyproject.toml
backend/agents/: base.py  supervisor.py  tools.py
backend/api/: deps.py
backend/api/routers/: agents.py  auth.py  orders.py  portfolio.py  users.py  watchlists.py  websockets.py
backend/core/: config.py  security.py
backend/db/: database.py  seed.py  vector.py
backend/migrations/: env.py
backend/migrations/versions/: 62df88bad277_init_db.py  ee6ad717ab7c_add_portfolio_and_orders.py  f7292c2da58d_add_watchlists.py
backend/models/: base.py  order.py  portfolio.py  user.py  watchlist.py
backend/schemas/: order.py  portfolio.py  user.py  watchlist.py
backend/services/: portfolio_service.py  user_service.py  watchlist_service.py
backend/tests/: test_portfolio.py  test_security.py  test_trading_api.py  test_watchlists.py
docs/: Developer_Guide.md  Local_Setup_Guide.md  Production_Readiness_Guide.md
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/context/: AuthContext.tsx
milestones/: milestone_10_plan.md  milestone_11_plan.md  milestone_12_plan.md  milestone_13_plan.md  milestone_14_plan.md  milestone_15_plan.md  milestone_16_plan.md  milestone_1_plan.md  milestone_2_plan.md  milestone_3_plan.md  milestone_4_plan.md  milestone_5_plan.md  milestone_6_plan.md  milestone_7_plan.md  milestone_8_plan.md  milestone_9_plan.md
(+13 files in other folders)
